example/src/snapshots/rust_sitter_example__tests__arithmetic_grammar-10.snap
---
source: example/src/main.rs
expression: "arithmetic_grammar::parse(\"1a\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "a",
                        ),
                        start: 1,
                        end: 2,
                    },
                ],
            ),
            start: 1,
            end: 2,
        },
    ],
)
