example/src/snapshots/rust_sitter_example__tests__arithmetic_grammar-4.snap
---
source: example/src/main.rs
expression: "arithmetic_grammar::parse(\"1 - 2 * 3\")"
---
Ok(
    Sub(
        Number(
            1,
        ),
        (),
        Mul(
            Number(
                2,
            ),
            (),
            Number(
                3,
            ),
        ),
    ),
)
