example/src/snapshots/rust_sitter_example__tests__arithmetic_grammar-5.snap
---
source: example/src/main.rs
expression: "arithmetic_grammar::parse(\"1 * 2 * 3\")"
---
Ok(
    Mul(
        Mul(
            Number(
                1,
            ),
            (),
            Number(
                2,
            ),
        ),
        (),
        Number(
            3,
        ),
    ),
)
