example/src/snapshots/rust_sitter_example__tests__arithmetic_grammar-7.snap
---
source: example/src/main.rs
expression: "arithmetic_grammar::parse(\"1 + 2\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "+",
                        ),
                        start: 2,
                        end: 3,
                    },
                ],
            ),
            start: 0,
            end: 3,
        },
    ],
)
