example/src/snapshots/rust_sitter_example__tests__arithmetic_grammar-8.snap
---
source: example/src/main.rs
expression: "arithmetic_grammar::parse(\"1 - 2 -\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [],
            ),
            start: 6,
            end: 7,
        },
    ],
)
