example/src/snapshots/rust_sitter_example__tests__arithmetic_grammar-9.snap
---
source: example/src/main.rs
expression: "arithmetic_grammar::parse(\"a1\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "a",
                        ),
                        start: 0,
                        end: 1,
                    },
                ],
            ),
            start: 0,
            end: 1,
        },
    ],
)
