example/src/snapshots/rust_sitter_example__tests__arithmetic_grammar.snap
---
source: example/src/main.rs
expression: "arithmetic_grammar::parse(\"1\")"
---
Number(
    1,
)
