example/src/snapshots/rust_sitter_example__tests__repetitions_grammar-2.snap
---
source: example/src/main.rs
expression: "repetitions::parse(\"1 2\")"
---
Ok(
    NumberList {
        numbers: [
            Number {
                v: 1,
            },
            Number {
                v: 2,
            },
        ],
    },
)
